============================================
Todo:
============================================
- decode most gift types. Right now only at 97
- make logs account based ( new column )
- load configs from config file
- allow multiple http upload locations based on config
- add passowrd protection for upload data
- if it's freeky friday, update kill requirements
- have a list of active players in guild and print in red those who did not hunt today
============================================
Changelog
============================================
14/08/2020
- adjusted bot time to reset day when ingame DNs reset
06/08/2020
- only register monster gifts. Skip handling shop / vip gifts
01/08/2020
- add total kills per day row
- catch open gifts event and upload it to DB
- shown statistics will be best case from opened gifts ( maybe you got more than max) or popup message. Reduces chance of missed gifts
31/07/2020
- added changelog + todo to the end of the index
- convert days to full date for statistics
- stats for multi day interval get green color based on number of days passed
- list is ordered based on : "value of gift"/"cost of gift" => i can get 6.4 lvl 1 gifts from the cost of lvl 2 gift but lvl 2 gift is 4 times better
  Score for lvl 2 gift is : 4 / 6.4 = 0.625
- on index page, added quick jump to specific stats
- make a ranking column for showstats
- show remaining time of the day
- count unknown gifts. To be able to guess later the type of them
- create a howto install doc