@@ -407,10 +407,10 @@ void ProcessPacket1(unsigned char *packet, int size)
 		{
 			unsigned char Opcode[3];
 			unsigned char SomeCounter;
-			unsigned int  Unk1;
+			unsigned int  Unk1; // maybe 0 if self hunt ?
 			unsigned int  Time[2];
-			unsigned char MonsterType;
-			unsigned char Fixed0A; // OBJECT_TYPE_MONSTER
+			unsigned short MonsterType;
+//			unsigned char Fixed0A; // OBJECT_TYPE_MONSTER
 			unsigned char Unk2[5];
 			char Name[13];
 		};
@@ -433,19 +433,19 @@ void ProcessPacket1(unsigned char *packet, int size)
 		}*/
 		if((pkt->Unk1 != 20 && pkt->Unk1 != 22) || pkt->Unk2[0] != 0 || pkt->Unk2[1] != 0 || pkt->Unk2[2] != 0 || pkt->Unk2[3] != 0 || pkt->Unk2[4] != 0)
 			pkt->Name[12] = 0;
-		if(pkt->Fixed0A == 0x0A) // gift source monster
+//		if(pkt->Fixed0A == 0x0A) // gift source monster
 			QueueObjectToProcess(OBJECT_TYPE_CUSTOM_MONSTER_GIFT, 0, 0, 0, pkt->Name, NULL, NULL, 0, 0, 0, 0, 0, 0, 0, 0, pkt->MonsterType, 0);
 		if(pkt->Name[0] != 0)
 			printf("\rCaught a gift packet, moster %d from %s\n", pkt->MonsterType, pkt->Name);
 	}
 	if (packet[0] == 0x37 && packet[1] == 0x0B && packet[2] == 0x00)
 	{
-		enum GiftSourceType
+/*		enum GiftSourceType
 		{
 			GST_VIP = 7, 
 			GST_SHOP = 9,
 			GST_MONSTER = 10
-		};
+		};*/
 		enum GiftTypeGroup
 		{
 			GTG_RESOURCE = 3,
@@ -459,8 +459,8 @@ void ProcessPacket1(unsigned char *packet, int size)
 			int SortIndex; //does not increase 1 by 1
 			unsigned char unk1_always1; // always 1
 			unsigned int  Time[2];
-			unsigned char MonsterType;
-			unsigned char GiftSourceType; //10(monster), 7(VIP gift)
+			unsigned short MonsterType;
+//			unsigned char GiftSourceType; //10(monster), 7(VIP gift)
 			unsigned char GiftType;
 			unsigned char GiftTypeGroup; // sometimes 3(rss),4(speedup, quest scroll),7(hero chest),15(mats)
 			unsigned char GiftCount;
@@ -482,19 +482,19 @@ void ProcessPacket1(unsigned char *packet, int size)
 			pkt->Entries[i].Name[12] = 0;
 			unsigned int GUID = pkt->Entries[i].SortIndex;
 			if (pkt->Entries[i].unk1_always1 != 1 
-				|| (pkt->Entries[i].GiftSourceType != GST_VIP && pkt->Entries[i].GiftSourceType != GST_SHOP && pkt->Entries[i].GiftSourceType != GST_MONSTER)
+//				|| (pkt->Entries[i].GiftSourceType != GST_VIP && pkt->Entries[i].GiftSourceType != GST_SHOP && pkt->Entries[i].GiftSourceType != GST_MONSTER)
 				|| pkt->Entries[i].unk3_always0 != 0 
 				|| (pkt->Entries[i].GiftTypeGroup != GTG_RESOURCE && pkt->Entries[i].GiftTypeGroup != GTG_SPEEDUP && pkt->Entries[i].GiftTypeGroup != GTG_MATERIAL && pkt->Entries[i].GiftTypeGroup != GTG_HERO_CHEST))
 			{
-				printf("\rInvestigate gift case %d %d %d %d\n", pkt->Entries[i].unk1_always1, pkt->Entries[i].GiftSourceType, pkt->Entries[i].GiftTypeGroup, pkt->Entries[i].unk3_always0);
+				printf("\rInvestigate gift case %d %d %d\n", pkt->Entries[i].unk1_always1, pkt->Entries[i].GiftTypeGroup, pkt->Entries[i].unk3_always0);
 				for (int j = 0; j < sizeof(pkt->Unk); j++)
 					printf("%02X ", pkt->Unk[j]);
 				printf("\n");
 			}
-			if (pkt->Entries[i].GiftSourceType == GST_MONSTER)
+//			if (pkt->Entries[i].GiftSourceType == GST_MONSTER) //seems like this can be "anything"
 				QueueObjectToProcess(OBJECT_TYPE_CUSTOM_MONSTER_GIFT_LIST, 0, GUID, pkt->Entries[i].GiftType, pkt->Entries[i].Name, NULL, NULL, pkt->Entries[i].GiftCount, 0, 0, 0, 0, 0, 0, 0, pkt->Entries[i].MonsterType, 0);
 			if (pkt->Entries[i].Name[0] != 0)
-				printf("\rgift list packet, gift %d from %s. source %d, reward group %d, count %d, quality %d\n", pkt->Entries[i].MonsterType, pkt->Entries[i].Name, pkt->Entries[i].GiftSourceType, pkt->Entries[i].GiftTypeGroup, pkt->Entries[i].GiftCount, pkt->Entries[i].MaterialQuality);
+				printf("\rgift list packet, gift %d from %s. reward group %d, count %d, quality %d. Old Entry %d %d \n", pkt->Entries[i].MonsterType, pkt->Entries[i].Name, pkt->Entries[i].GiftTypeGroup, pkt->Entries[i].GiftCount, pkt->Entries[i].MaterialQuality, pkt->Entries[i].MonsterType >> 8, pkt->Entries[i].MonsterType & 0xFF);
 		}
 	}
 	return;
